Reuse the aarch64 implementation when building setjmp for darwin aarch64

--- a/libc/src/setjmp/darwin/aarch64/CMakeLists.txt
+++ b/libc/src/setjmp/darwin/aarch64/CMakeLists.txt
@@ -5,7 +5,7 @@ endif()
 add_entrypoint_object(
   setjmp
   SRCS
-    setjmp.cpp
+    ../../aarch64/setjmp.cpp
   HDRS
     ../../setjmp_impl.h
   DEPENDS
@@ -16,7 +16,7 @@ add_entrypoint_object(
 add_entrypoint_object(
   longjmp
   SRCS
-    longjmp.cpp
+    ../../aarch64/longjmp.cpp
   HDRS
     ../../longjmp.h
   DEPENDS
