--- a/libc/src/setjmp/darwin/aarch64/CMakeLists.txt
+++ b/libc/src/setjmp/darwin/aarch64/CMakeLists.txt
@@ -1,39 +1,12 @@
-if(setjmp_config_options)
-    list(PREPEND setjmp_config_options "COMPILE_OPTIONS")
-endif()
-
-add_entrypoint_object(
-  setjmp
-  SRCS
-    ../../aarch64/setjmp.cpp
+add_object_library(
+    sigsetjmp_epilogue
   HDRS
-    ../../setjmp_impl.h
-  DEPENDS
-    libc.hdr.types.jmp_buf
-  ${setjmp_config_options}
-)
-
-add_entrypoint_object(
-  longjmp
+    ../../sigsetjmp_epilogue.h
   SRCS
-    ../../aarch64/longjmp.cpp
-  HDRS
-    ../../longjmp.h
+    sigsetjmp_epilogue.cpp
   DEPENDS
-    libc.hdr.types.jmp_buf
-  ${setjmp_config_options}
-)
-
-add_entrypoint_object(
-  sigsetjmp
-  SRCS
-    sigsetjmp.cpp
-  HDRS
-    ../../sigsetjmp.h
-  DEPENDS
+    libc.src.__support.common
+    libc.src.__support.OSUtil.osutil
     libc.hdr.types.jmp_buf
     libc.hdr.types.sigset_t
-    libc.hdr.offsetof_macros
-    libc.src.setjmp.sigsetjmp_epilogue
-    libc.src.setjmp.setjmp
 )
