Update CMake formatting and hdr path

--- a/libc/src/setjmp/darwin/CMakeLists.txt
+++ b/libc/src/setjmp/darwin/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_object_library(
-    sigsetjmp_epilogue
+  sigsetjmp_epilogue
   HDRS
-    ../../sigsetjmp_epilogue.h
+    ../sigsetjmp_epilogue.h
   SRCS
     sigsetjmp_epilogue.cpp
   DEPENDS
