Add CIR_IntArrayAttr and update Op description

--- a/clang/include/clang/CIR/Dialect/IR/CMakeLists.txt
+++ b/clang/include/clang/CIR/Dialect/IR/CMakeLists.txt
@@ -25,3 +25,9 @@ mlir_tablegen(CIRTypeConstraints.h.inc -gen-type-constraint-decls)
 mlir_tablegen(CIRTypeConstraints.cpp.inc -gen-type-constraint-defs)
 add_public_tablegen_target(MLIRCIRTypeConstraintsIncGen)
 add_dependencies(mlir-headers MLIRCIRTypeConstraintsIncGen)
+
+set(LLVM_TARGET_DEFINITIONS CIRAttrConstraints.td)
+mlir_tablegen(CIRAttrConstraints.h.inc -gen-type-constraint-decls)
+mlir_tablegen(CIRAttrConstraints.cpp.inc -gen-type-constraint-defs)
+add_public_tablegen_target(MLIRCIRAttrConstraintsIncGen)
+add_dependencies(mlir-headers MLIRCIRAttrConstraintsIncGen)
