[lldb] Disable the statusline when running REPL tests.
This mostly makes debugging easier.

(cherry picked from commit a9032833312fb95e89dc8ddb81d424133748f4bd)

--- a/lldb/test/Shell/lit-lldb-init.in
+++ b/lldb/test/Shell/lit-lldb-init.in
@@ -10,3 +10,4 @@ settings set target.inherit-tcc true
 settings set target.detach-on-error false
 settings set symbols.swift-validate-typesystem true
 settings set symbols.swift-typesystem-compiler-fallback true
+settings set show-statusline false
