[Offload] Explicitly create directories that contain tablegen output (#142817)
This isn't required when building with Ninja, but with the Makefile
generator these directories don't get implicitly created.

--- a/offload/CMakeLists.txt
+++ b/offload/CMakeLists.txt
@@ -458,7 +458,8 @@ add_subdirectory(DeviceRTL)
 # Build target agnostic offloading library.
 add_subdirectory(libomptarget)
 
-add_subdirectory(liboffload)
+# FIXME: Re-enable once OMPT design allows
+# add_subdirectory(liboffload)
 
 # Add tests.
 if(OFFLOAD_INCLUDE_TESTS)
