[CMake] Options to control generation of reproducers
Clang automatically generates a reproducer on crash, but we don't
provide any control over the reproducers (whether to generate them only
for compiler crashes or linker crashes as well) or their location.
This change also additional provides an option to enable generating
reproducers in case of an error (and not just crash) which can be
helpful in environments such as automated builders to help with
reproducing issues.

--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -874,6 +874,10 @@ option (LLVM_VERSION_PRINTER_SHOW_HOST_TARGET_INFO
 option(LLVM_VERSION_PRINTER_SHOW_BUILD_CONFIG
   "Show the optional build config flags when tools are invoked with --version." ON)
 
+set(LLVM_CRASH_DIAGNOSTICS "" CACHE STRING "Control when to generate reproducer. Can be OFF, COMPILER, ALL")
+set(LLVM_CRASH_DIAGNOSTICS_DIR "" CACHE STRING "Path to use for crash reproducers")
+set(LLVM_ERROR_REPRODUCERS OFF CACHE BOOL "Generate a reproducer in the case of an error")
+
 # You can configure which libraries from LLVM you want to include in the
 # shared library by setting LLVM_DYLIB_COMPONENTS to a semi-colon delimited
 # list of LLVM components. All component names handled by llvm-config are valid.
