fix strsep, remove dependency on cpp::byte

--- a/libc/src/string/CMakeLists.txt
+++ b/libc/src/string/CMakeLists.txt
@@ -16,6 +16,7 @@ add_header_library(
     string_utils.h
   DEPENDS
     libc.hdr.types.size_t
+    libc.hdr.limits_macros
     libc.src.__support.CPP.bitset
     libc.src.__support.CPP.type_traits
     libc.src.__support.common
