--- a/utils/bazel/llvm-project-overlay/libc/BUILD.bazel
+++ b/utils/bazel/llvm-project-overlay/libc/BUILD.bazel
@@ -4188,7 +4188,9 @@ libc_support_library(
     deps = [
         ":__support_common",
         ":__support_cpp_bitset",
+        ":__support_cpp_type_traits",
         ":__support_macros_optimization",
+        ":hdr_limits_macros",
         ":llvm_libc_types_size_t",
         ":types_size_t",
     ],
