feat: create a dummy struct for bfloat16
Signed-off-by: krishna2803 <kpandey81930@gmail.com>

--- a/libc/src/__support/FPUtil/CMakeLists.txt
+++ b/libc/src/__support/FPUtil/CMakeLists.txt
@@ -264,10 +264,15 @@ add_header_library(
   DEPENDS
     .fenv_impl
     .fp_bits
+    .cast
     .rounding_mode
-    libc.src.__support.CPP.bit
+    libc.hdr.errno_macros
     libc.hdr.fenv_macros
     libc.src.__support.CPP.type_traits
+    libc.src.__support.CPP.bit
+    libc.src.__support.big_int
+    libc.src.__support.macros.optimization
+    libc.src.__support.macros.properties.types
 )
 
 add_subdirectory(generic)
