Revert "[libc] clean up string_utils memory functions (#143031)"
This reverts commit 59f88a8e929b9eff97f2c37f835d9fe70d1dd0c7.

--- a/libc/src/string/CMakeLists.txt
+++ b/libc/src/string/CMakeLists.txt
@@ -15,8 +15,10 @@ add_header_library(
   HDRS
     string_utils.h
   DEPENDS
+    .memory_utils.inline_bzero
+    .memory_utils.inline_memcpy
     libc.hdr.types.size_t
-    libc.hdr.limits_macros
+    libc.include.stdlib
     libc.src.__support.CPP.bitset
     libc.src.__support.CPP.type_traits
     libc.src.__support.common
