[clang][Summary] add the summarizer skeleton

--- a/clang/lib/Sema/CMakeLists.txt
+++ b/clang/lib/Sema/CMakeLists.txt
@@ -85,6 +85,7 @@ add_clang_library(clangSema
   SemaStmt.cpp
   SemaStmtAsm.cpp
   SemaStmtAttr.cpp
+  SemaSummarizer.cpp
   SemaSPIRV.cpp
   SemaSYCL.cpp
   SemaSwift.cpp
