chore: add entrypoints for fbfloat16 function
Signed-off-by: krishna2803 <kpandey81930@gmail.com>

--- a/libc/src/math/CMakeLists.txt
+++ b/libc/src/math/CMakeLists.txt
@@ -554,3 +554,6 @@ add_math_entrypoint_object(ufromfpxf)
 add_math_entrypoint_object(ufromfpxl)
 add_math_entrypoint_object(ufromfpxf16)
 add_math_entrypoint_object(ufromfpxf128)
+
+# BFloat16 functions
+add_math_entrypoint_object(fbfloat16)
