chore: add dummy tests for fbfloat16
Signed-off-by: krishna2803 <kpandey81930@gmail.com>

--- a/libc/test/src/math/smoke/CMakeLists.txt
+++ b/libc/test/src/math/smoke/CMakeLists.txt
@@ -5307,3 +5307,16 @@ add_fp_unittest(
     libc.src.__support.macros.properties.os
     libc.src.__support.macros.properties.types
 )
+
+# Bfloat16 Smoke Tests
+
+add_fp_unittest(
+  fbfloat16_test
+  SUITE
+    libc-math-smoke-tests
+  SRCS
+    fbfloat16_test.cpp
+  DEPENDS
+    libc.src.errno.errno
+    libc.src.math.fbfloat16
+)
