fixed build dependencies + formatting

--- a/libc/src/__support/wchar/CMakeLists.txt
+++ b/libc/src/__support/wchar/CMakeLists.txt
@@ -4,6 +4,8 @@ add_header_library(
     mbstate.h
   DEPENDS
     libc.hdr.types.wchar_t    
+    libc.hdr.types.char32_t    
+    stdint.h
 )
 
 add_header_library(
@@ -12,6 +14,8 @@ add_header_library(
     character_converter.h
   DEPENDS
     libc.hdr.types.wchar_t
+    libc.hdr.types.char8_t
+    libc.hdr.types.char32_t
     .mbstate
     .utf_ret
 )
