--- a/libc/src/__support/wchar/CMakeLists.txt
+++ b/libc/src/__support/wchar/CMakeLists.txt
@@ -6,10 +6,12 @@ add_header_library(
     libc.hdr.types.char32_t    
 )
 
-add_header_library(
+add_object_library(
   character_converter
   HDRS
     character_converter.h
+  SRCS 
+    character_converter.cpp
   DEPENDS
     libc.hdr.types.char8_t
     libc.hdr.types.char32_t
@@ -17,3 +19,8 @@ add_header_library(
     .utf_ret
 )
 
+add_header_library(
+  utf_ret
+  HDRS
+    utf_ret.h
+)
