Fix comment wording
Co-authored-by: Hubert Tong <hubert.reinterpretcast@gmail.com>

--- a/compiler-rt/lib/asan/CMakeLists.txt
+++ b/compiler-rt/lib/asan/CMakeLists.txt
@@ -391,7 +391,7 @@ add_compiler_rt_resource_file(asan_ignorelist asan_ignorelist.txt asan)
 
 # On AIX, static sanitizer libraries are not added to the DSO, so we need to put 
 # asan.link_with_main_exec.txt and asan_cxx.link_with_main_exec.txt to the build
-# and install dir to resolve undefined sanitizer symbols at runtime.
+# and install dir for use in resolving undefined sanitizer symbols at runtime.
 if (${CMAKE_SYSTEM_NAME} MATCHES "AIX")
   foreach(arch ${ASAN_SUPPORTED_ARCH})
     add_compiler_rt_cfg(asan_symbols_${arch} asan.link_with_main_exec.txt asan ${arch})
